--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,7 +1,7 @@
 @article{Aghl2017,
   title = {A Simplified Model for Estimating Axial Impact Forces Resulting from Debris with Non-Uniform Nonstructural Mass},
   author = {Aghl, P. P. and Naito, C. J. and Riggs, H. R.},
-  year = {2017},
+  year = 2017,
   journal = {Advances in Structural Engineering},
   volume = {20},
   number = {6},
@@ -12,7 +12,7 @@
 @article{akamatsuIncreaseAcetylCoA1975,
   title = {Increase in Acetyl {{CoA}} Synthetase Activity after Phenobarbital Treatment},
   author = {Akamatsu, N. and Nakajima, H. and Ono, M. and Miura, Y.},
-  year = {1975},
+  year = 1975,
   month = sep,
   journal = {Biochemical Pharmacology},
   volume = {24},
@@ -28,7 +28,7 @@
 @article{Akiyama2013,
   title = {Reliability of Bridges under Tsunami Hazards: {{Emphasis}} on the 2011 {{Tohoku}} Earthquake},
   author = {Akiyama, M. and Frangopol, D. M. and Arai, M. and Koshimura, S.},
-  year = {2013},
+  year = 2013,
   journal = {Earthquake Spectra},
   volume = {29},
   number = {S1},
@@ -39,21 +39,21 @@
 @article{Arduino2018,
   title = {{{PRJ-1709}}: {{NHERI}} Debris Impact Experiments},
   author = {Arduino, P. and Motley, M. and Eberhard, M. and Cox, D. and Barbosa, A. and Lomonaco, P.},
-  year = {2018},
+  year = 2018,
   doi = {10.17603/DS2T09V}
 }
 
 @misc{ASCE2017,
   title = {Minimum Design Loads and Associated Criteria for Buildings and Other Structures},
   author = {{ASCE}},
-  year = {2017}
+  year = 2017
 }
 
 @inproceedings{Bonus2022,
   title = {Multi-Scale Numerical Simulation of Tsunami-Driven Debris-Field Impacts},
   booktitle = {Ports 2022},
   author = {Bonus, J. and Arduino, P. and Motley, M. and Eberhard, M.},
-  year = {2022},
+  year = 2022,
   pages = {328--339},
   doi = {10.1061/9780784484395.033}
 }
@@ -61,8 +61,8 @@
 @article{bonusTsunamiDebrisMotion2025,
   title = {Tsunami Debris Motion and Loads in a Scaled Port Setting: {{Comparative}} Analysis of Three State-of-the-Art Numerical Methods against Experiments},
   shorttitle = {Tsunami Debris Motion and Loads in a Scaled Port Setting},
-  author = {Bonus, J. and Spr{\"o}er, Felix and Winter, Andrew and Arduino, Pedro and Krautwald, Clemens and Motley, Michael and Goseberg, Nils},
-  year = {2025},
+  author = {Bonus, J. and Spr{\"o}er, F. and Winter, A. and Arduino, P. and Krautwald, C. and Motley, M. and Goseberg, N.},
+  year = 2025,
   month = apr,
   journal = {Coastal Engineering},
   volume = {197},
@@ -76,13 +76,13 @@
 @article{Chock2013,
   title = {{{ASCE}}/{{JSCE Tohoku}} Tsunami Investigation of Structural Damage and Development of the {{ASCE}} 7 Tsunami Design Code for Buildings and Other Structures},
   author = {Chock, G.},
-  year = {2013}
+  year = 2013
 }
 
 @article{Derschum2018,
   title = {Debris Impact under Extreme Hydrodynamic Conditions Part 1: {{Hydrodynamics}} and Impact Geometry},
   author = {Derschum, C. and Nistor, I. and Stolle, J. and Goseberg, N.},
-  year = {2018},
+  year = 2018,
   journal = {Coastal Engineering},
   volume = {141},
   pages = {24--35},
@@ -91,8 +91,8 @@
 
 @article{deschampsNegativelyBuoyantDebris2025,
   title = {Negatively {{Buoyant Debris Impact}} under {{Tsunami-Like Flows}}},
-  author = {Deschamps, Jaril and Stolle, Jacob and Van Bang, Damien Pham},
-  year = {2025},
+  author = {Deschamps, J. and Stolle, J. and Van Bang, D. P.},
+  year = 2025,
   month = nov,
   journal = {Journal of Waterway, Port, Coastal, and Ocean Engineering},
   volume = {151},
@@ -104,17 +104,24 @@
   langid = {english}
 }
 
-@article{Doyle2024,
-  title = {Large-Scale Flume Tests of Tsunami-Driven Debris Impacts on Slender Columns},
-  author = {Doyle, M. and et al. Lomonaco, P.},
-  year = {2024},
-  journal = {J. Waterway, Port, Coastal, Ocean Eng.}
+@article{Doyle2025,
+  author  = {Doyle, K. and Koh, M. J. and Jayasekara, J. R. and Cox, D. T. and Park, H. and Kameshwar, S. and Lomonaco, P.
+},
+  title   = {Tsunami debris damming forces and associated coefficients for elevated coastal structure columns: Experimental comparison to ASCE 7-22 minimum design loads},
+  journal = {Journal of Structural Engineering},
+  year    = {2025},
+  volume  = {151},
+  number  = {1},
+  pages   = {04024200},
+  doi     = {10.1061/JSENDH.STENG-13763}
 }
+
+
 
 @article{Gschnitzer2017,
   title = {Towards a Robust Assessment of Bridge Clogging Processes in Flood Risk Management},
   author = {Gschnitzer, T. and Gems, B. and Mazzorana, B. and Aufleger, M.},
-  year = {2017},
+  year = 2017,
   journal = {Geomorphology},
   volume = {279},
   pages = {128--140},
@@ -124,7 +131,7 @@
 @article{Haehnel2004,
   title = {Maximum Impact Force of Woody Debris on Floodplain Structures},
   author = {Haehnel, R. and Daly, S.},
-  year = {2004},
+  year = 2004,
   journal = {Journal of Hydraulic Engineering},
   volume = {130},
   number = {2},
@@ -135,7 +142,7 @@
 @article{karrSexHormoneBinding1978,
   title = {Sex Hormone Binding Globulin and Transcortin in Human and Baboon Males},
   author = {Karr, J. P. and Kirdani, R. Y. and Murphy, G. P. and Sandberg, A. A.},
-  year = {1978},
+  year = 1978,
   journal = {Archives of Andrology},
   volume = {1},
   number = {2},
@@ -151,7 +158,7 @@
 @article{Ko2015,
   title = {Hydraulic Experiments on Impact Forces from Tsunami-Driven Debris},
   author = {Ko, H. T.-S. and Cox, D. T. and Riggs, H. R. and Naito, C. J.},
-  year = {2015},
+  year = 2015,
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {141},
   number = {3},
@@ -162,7 +169,7 @@
 @article{Kobayashi2012,
   title = {Simple Hydroelastic Impact Models for Water-Borne Debris},
   author = {Kobayashi, M. H. and Genest, R. and Riggs, H. R. and Paczkowski, K.},
-  year = {2012},
+  year = 2012,
   journal = {Proc. Inst. Mech. Eng. M: J. Eng. Marit. Environ.},
   volume = {226},
   number = {2},
@@ -172,7 +179,7 @@
 @article{Lebreton2013,
   title = {Modeling the Transport and Accumulation of Floating Debris Generated by the 11 {{March}} 2011 {{Tohoku}} Tsunami},
   author = {Lebreton, L. C.-M. and Borrero, J. C.},
-  year = {2013},
+  year = 2013,
   journal = {Marine Pollution Bulletin},
   volume = {66},
   number = {1},
@@ -183,14 +190,14 @@
 @article{Leonard2011,
   title = {Scoping Study for Evaluating the Tsunami Vulnerability of {{New Zealand}} Buildings for Use as Evacuation Structures},
   author = {Leonard, G. and Evans, N. and Prasetya, G. and Saunders, W. and Pearse, L. and Monastra, D. and Fraser, S.},
-  year = {2011},
+  year = 2011,
   journal = {GNS Science Tech. Rep. 2011/36}
 }
 
 @article{Madurapperuma2012,
   title = {Inelastic Dynamic Analysis of an {{RC}} Building Impacted by a Tsunami Water-Borne Shipping Container},
   author = {Madurapperuma, M. A. K. and Mijeyewickrema, A. C.},
-  year = {2012},
+  year = 2012,
   journal = {J. Earthquake Tsunami},
   volume = {6},
   number = {1},
@@ -202,7 +209,7 @@
   title = {Quantifying and Understanding Structural Loading from Wave-Driven Debris Fields},
   booktitle = {Ports 2022},
   author = {Mascarenas, D. and Motley, M. R. and Eberhard, M. O. and Arduino, P. and Serrone, A.},
-  year = {2022},
+  year = 2022,
   pages = {523--534},
   doi = {10.1061/9780784484395.052}
 }
@@ -210,7 +217,7 @@
 @article{McCullough2013,
   title = {Structural Damage under Multiple Hazards in Coastal Environments},
   author = {McCullough, M. and Kareem, A. and Donahue, A. and Westerink, J.},
-  year = {2013},
+  year = 2013,
   journal = {J. Disaster Res.},
   volume = {8},
   number = {6},
@@ -218,10 +225,24 @@
   doi = {10.20965/jdr.2013.p1042}
 }
 
+@misc{motleyHydrodynamic2Understanding2024a,
+  title = {Hydrodynamic 2: In {{Understanding}} and {{Quantifying Structural Loading}} from {{Tsunami-Induced Debris Fields}}},
+  shorttitle = {Hydrodynamic 2},
+  author = {Motley, Michael and Eberhard, Marc and Arduino, Pedro and Mascarenas, Dakota and Bonus, Justin},
+  year = 2024,
+  publisher = {Designsafe-CI},
+  doi = {10.17603/DS2-BD57-FF06},
+  urldate = {2026-01-15},
+  abstract = {Tsunamis and storm surges pose a significant threat to coastal communities around the world. In tsunami risk zones, the threats from large-scale coastal inundation are exacerbated by the accumulation of large debris fields that impact and build up around critical infrastructure systems. These debris fields are composed of various objects that move with the incoming flow and that range in size from construction materials from damaged buildings to vehicles and large watercraft. To lessen the risks and damage to coastal infrastructure and ultimately improve the welfare of communities in these risk zones, improved design and strategic retrofit strategies are necessary and require a better understanding of the forces associated with such debris impacts, specifically forces associated with large, disorganized debris fields. Previous studies have addressed the effect of wave and flow loads on infrastructure, but few have examined the influence of multiple pieces of debris, or debris fields carried by such flows. Flow driven debris fields are fundamentally chaotic in nature; nearly identical initial conditions can lead to widely varying outcomes. Thus, predicting the loads arising from these events requires a statistical approach to help address the uncertainties with how debris interacts with and affects the built environment. Using a combination of experimental results and numerical modeling, this project will quantify the impact forces and damming effects in a manner valid for this kind of highly nonlinear, chaotic system. The results of this research will provide key information to enable improved safety and sustainability of structural systems in coastal regions and to improve post-event response and recovery efforts. Data from this project will be archived in the Natural Hazards Engineering Research Infrastructure (NHERI) Data Depot (https://www.DesignSafe-ci.org). This project contributes to NSF's role in the National Earthquake Hazards Reduction Program. This project will combine two distinct experimental programs, one at the NHERI large wave flume facility at Oregon State University and the other at the University of Washington, with a strategic numerical modeling approach to predict debris-induced forces on structures in tsunami hazard zones. The large number of potential debris impact scenarios, combined with the disparate nature of debris fields across coastal communities impacted by large wave events, is well beyond the practical scope of any single experimental program. Thus, the development of a robust, predictive numerical approach is critical to improving the understanding of complex debris-fluid-structure interaction phenomena. This research has three primary objectives: (1) generate statistically representative experimental test results for flow-driven, multi-debris impact scenarios to inform numerical modeling efforts; (2) develop, refine, and combine a series of complex numerical models capable of capturing the key physical phenomena associated with the experimental results; and (3) extend the numerical models using a statistics-based approach to debris-induced force predictions under broader scenarios. By using a statistical approach, this research will develop a physically meaningful, representative numerical estimate of the risks of debris impact and damming forces, supported by experimental results that will provide engineers and community officials with an improved confidence for designing safe and resilient coastal infrastructure in tsunami and storm surge susceptible regions.},
+  collaborator = {{University of Washington (washington.edu)} and {Large Wave Flume and Directional Wave Basin - Oregon State University}},
+  langid = {english},
+  keywords = {Coastal structure,Debris,Tsunamis,Waves}
+}
+
 @article{Naito2014,
   title = {Procedure for Site Assessment of the Potential for Tsunami Debris Impact},
   author = {Naito, C. and Cercone, C. and Riggs, H. R. and Cox, D.},
-  year = {2014},
+  year = 2014,
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {140},
   number = {2},
@@ -232,7 +253,7 @@
 @article{Naito2016,
   title = {Shipping-Container Impact Assessment for Tsunamis},
   author = {Naito, C. and Riggs, H. R. and Wei, Y. and Cercone, C.},
-  year = {2016},
+  year = 2016,
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {142},
   number = {5},
@@ -243,33 +264,33 @@
 @misc{Nakaso2011,
   title = {Tsunami Damage Estimate for {{Hawaii}} Now Tens of Millions},
   author = {Nakaso, D.},
-  year = {2011}
+  year = 2011
 }
 
 @article{nistorTsunamiDrivenDebrisMotion2017,
   title = {Tsunami-{{Driven Debris Motion}} and {{Loads}}: {{A Critical Review}}},
   shorttitle = {Tsunami-{{Driven Debris Motion}} and {{Loads}}},
-  author = {Nistor, Ioan and Goseberg, Nils and Stolle, Jacob},
-  year = {2017},
+  author = {Nistor, I. and Goseberg, N. and Stolle, J.},
+  year = 2017,
   month = jan,
   journal = {Frontiers in Built Environment},
   volume = {3},
   issn = {2297-3362},
   doi = {10.3389/fbuil.2017.00002},
   urldate = {2025-09-27},
-  file = {C:\Users\noeko\Zotero\storage\TH5LNG46\Nistor et al. - 2017 - Tsunami-Driven Debris Motion and Loads A Critical Review.pdf}
+  file = {C:\Users\noeko\Zotero\storage\6XXAJ7KC\Nistor et al. - 2017 - Tsunami-Driven Debris Motion and Loads A Critical Review.pdf}
 }
 
 @misc{NPR2011,
   title = {Tsunami Waves Hit West Coast, {{Hawaii}}},
   author = {{NPR}},
-  year = {2011}
+  year = 2011
 }
 
 @article{Paczkowski2012,
   title = {A One Dimensional Model for Impact Forces Resulting from High Mass, Low Velocity Debris},
   author = {Paczkowski, K. and Riggs, H. R. and Naito, C. and Lehmann, A.},
-  year = {2012},
+  year = 2012,
   volume = {42},
   number = {6},
   pages = {831--847},
@@ -279,7 +300,7 @@
 @article{Rueben2015,
   title = {Optical Measurements of Tsunami Inundation and Debris Movement in a Large-Scale Wave Basin},
   author = {Rueben, M. and Cox, D. and Holman, R. and Shin, S. and Stanley, J.},
-  year = {2015},
+  year = 2015,
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {141},
   number = {1},
@@ -289,7 +310,7 @@
 @article{Schmocker2011,
   title = {Probability of Drift Blockage at Bridge Decks},
   author = {Schmocker, L. and Hager, W. H.},
-  year = {2011},
+  year = 2011,
   journal = {Journal of Hydraulic Engineering},
   volume = {137},
   number = {4},
@@ -300,7 +321,7 @@
 @article{Shafiei2016,
   title = {Measurements of Tsunami-Borne Debris Impact on Structures Using an Embedded Accelerometer},
   author = {Shafiei, S. and Melville, B. W. and Shamseldin, A. Y. and Beskhyroun, S. and Adams, K. N.},
-  year = {2016},
+  year = 2016,
   journal = {Journal of Hydraulic Research},
   volume = {54},
   number = {4},
@@ -310,8 +331,8 @@
 
 @article{Shekhar2020,
   title = {Conceptual Evaluation of Tsunami Debris Field Damming and Impact Forces},
-  author = {Shekhar, K. and Winter, A. O. and Alan, M. S. and Arduino, P. and Miller, G. and Motley, M. and Eberhard, M. and Barbosa, A. R. and Lomonaco, P and Cox, D. T.},
-  year = {2020},
+  author = {Shekhar, K. and Winter, A. O. and Alam, M. S. and Arduino, P. and Miller, G. and Motley, M. and Eberhard, M. and Barbosa, A. R. and Lomonaco, P. and Cox, D. T.},
+  year = 2020,
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {146},
   number = {6},
@@ -322,7 +343,7 @@
 @article{Shekhar2020_b,
   title = {Experimental and Numerical Insights on Tsunami-like Wave Forces on Coastal Structures},
   author = {Shekhar, K. and Alam, M. S. and Winter, A. O. and Galant, G. and Barbosa, A. and Motley, M. and Eberhard, M. and Cox, D.},
-  year = {2020},
+  year = 2020,
   journal = {J. Waterway, Port, Coastal, Ocean Eng.},
   volume = {146},
   number = {4},
@@ -333,7 +354,7 @@
 @article{Stolle2018,
   title = {Debris Impact under Extreme Hydrodynamic Conditions Part 2: {{Impact}} Force Responses for Non-Rigid Debris Collisions},
   author = {Stolle, J. and Derschum, C. and Goseberg, N. and Nistor, I. and Petriu, E.},
-  year = {2018},
+  year = 2018,
   journal = {Coastal Engineering},
   volume = {141},
   pages = {107--118},
@@ -343,33 +364,17 @@
 @article{Stolle2019,
   title = {Debris Impact Forces on Flexible Structures in Extreme Hydrodynamic Conditions},
   author = {Stolle, J. and Goseberg, N. and Nistor, I. and Petriu, E.},
-  year = {2019},
+  year = 2019,
   journal = {Journal of Fluids and Structures},
   volume = {84},
   pages = {391--407},
   doi = {10.1016/j.jfluidstructs.2018.11.009}
 }
 
-@article{storesundPractololCaffeineCalcium1975,
-  title = {Practolol, Caffeine and Calcium in the Regulation of Mechanical Activity of the Cardiac Ventricle in {{Myxine}} Glutinosa ({{L}}.)},
-  author = {Storesund, A. and Helle, K. B.},
-  year = {1975},
-  month = oct,
-  journal = {Comparative Biochemistry and Physiology. C: Comparative Pharmacology},
-  volume = {52},
-  number = {1},
-  pages = {17--22},
-  issn = {0306-4492},
-  doi = {10.1016/0306-4492(75)90006-4},
-  langid = {english},
-  pmid = {197},
-  keywords = {Animals,Caffeine,Calcium,Dose-Response Relationship Drug,Fishes,Hagfishes,Heart Ventricles,Hydroxydopamines,Myocardial Contraction,Phenoxybenzamine,Phentolamine,Practolol,Propranolol,Reserpine,Theophylline,Ventricular Function}
-}
-
 @article{Suppasri2013,
   title = {Building Damage Characteristics Based on Surveyed Data and Fragility Curves of the 2011 {{Great East Japan}} Tsunami},
   author = {Suppasri, A. and Mas, E. and Charvet, I. and Gunasekera, R. and Imai, K. and Fukutani, Y. and Abe, Y. and Imamura, F.},
-  year = {2013},
+  year = 2013,
   volume = {66},
   number = {2},
   pages = {319--341},
@@ -379,7 +384,7 @@
 @article{Tomita2011,
   title = {Practical Model to Estimate Drift Motion of Vessels by Tsunami},
   author = {Tomita, T. and Honda, K.},
-  year = {2011},
+  year = 2011,
   journal = {Coastal Eng. Proc.},
   volume = {1},
   number = {32},
@@ -387,25 +392,11 @@
   doi = {10.9753/icce.v32.management.27}
 }
 
-@article{veshohilovaEffectCombinedUse1975,
-  title = {{[Effect of combined use of steroid preparations with pyrroxane on the gonadotropic function of the hypophysis]}},
-  author = {Veshohilova, T. P.},
-  year = {1975},
-  month = oct,
-  journal = {Akusherstvo I Ginekologiia},
-  number = {10},
-  pages = {10--12},
-  issn = {0300-9092},
-  langid = {russian},
-  pmid = {2025},
-  keywords = {Adrenergic alpha-Antagonists,Animals,Estrus,Female,Follicle Stimulating Hormone,Luteinizing Hormone,Megestrol,Mestranol,Ovulation,Pituitary Gland,Pregnancy,Rats}
-}
-
 @article{winterTsunamiLikeWaveForces2020,
   title = {Tsunami-{{Like Wave Forces}} on an {{Elevated Coastal Structure}}: {{Effects}} of {{Flow Shielding}} and {{Channeling}}},
   shorttitle = {Tsunami-{{Like Wave Forces}} on an {{Elevated Coastal Structure}}},
-  author = {Winter, Andrew O. and Alam, Mohammad S. and Shekhar, Krishnendu and Motley, Michael R. and Eberhard, Marc O. and Barbosa, Andre R. and Lomonaco, Pedro and Arduino, Pedro and Cox, Daniel T.},
-  year = {2020},
+  author = {Winter, A. O. and Alam, M.. and Shekhar, K. and Motley, M. and Eberhard, M. and Barbosa, A. and Lomonaco, P. and Arduino, P. and Cox, D.},
+  year = 2020,
   month = jul,
   journal = {Journal of Waterway, Port, Coastal, and Ocean Engineering},
   volume = {146},
@@ -420,7 +411,7 @@
 @article{Yao2014,
   title = {A Preliminary Laboratory Study of Motion of Floating Debris Generated by Solitary Waves Running up a Beach},
   author = {Yao, Y. and Huang, Z. and Lo, E. Y. M. and Shen, H.-T.},
-  year = {2014},
+  year = 2014,
   journal = {J. Earthquake Tsunami},
   volume = {8},
   number = {3},
